Archivo modificado para la primera rama de la practica

--- a/login.html
+++ b/login.html
@@ -1,11 +1,36 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Pr&aacute;ctica de Login con Git</title>
-  </head>
-  <body>
+<head>
+	<link rel="stylesheet" type="text/css" href="I:\Udemy\Segundo Curso Java Experto Tienda\Practica1-proyectologin-base\proyectologin\css\bootstrap.min.css">
+	<title>Pr&aacute;ctica de Login con Git</title>
+</head>
+<body>
 
 		<!-- CONTENIDO DEL LOGIN -->
 
-  </body>
+		<div class="container-fluid bg-dark text-white">
+			<div class="row">
+				<div class="col-12 h3">Iniciar Sesión</div>
+			</div>
+			<div class="row">
+				<div class="col-5 border border-secondary">Usuario: *</div>
+				<div class="col-7 border border-secondary p-1">
+					<input class="form-control" placeholder="usuario">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-5 border border-secondary">Contraseña: *</div>
+				<div class="col-7 border border-secondary p-1">
+					<input type="password" class="form-control" placeholder="contraseña">
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col-12 mx-auto p-3">
+					<button type="button" class="btn btn-primary btn-block">Entrar</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</body>
 </html>
